@@ -1,5 +1,10 @@
 2010-01-05  Neal Walfield  <neal@gnu.org>
 
+	* src/musicdb.c (music_db_get_info_internal): Add limit 1 to the
+	SQL statement.  Don't abort in the callback.
+
+2010-01-05  Neal Walfield  <neal@gnu.org>
+
 	* src/playlist.c: Don't include <gst/gst.h> or
 	<gst/audio/gstaudiosink.h>.
 	
